# GETrack

./: Cargo.toml  README.org  Trunk.toml  flake.nix  getrack-2e0a0c419998bc40.js  getrack-2e0a0c419998bc40_bg.wasm  index.html
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: brjzz8wv5k09bq0yrvhc1j4hd8677k21-source  f7f8m6vbajqqyhjkgz465c08wr4s8m23-source  y1yswlvb44zpljwgfgvr6gc3lcnn0pm6-source
.github/workflows/: cd.yaml
src/: main.rs
src/components/: card.rs  cards.rs  hero.rs  mod.rs  navbar.rs
src/css/: styles.css
src/models/: five.rs  item.rs  latest.rs  mod.rs
src/pages/: homepage.rs
