[package]
name = "getrack"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
wasm-bindgen-futures = "0.4.50"
reqwest = { version="0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.138"
wasm-logger = "0.2.0"
log = "0.4.29"
